// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Component does not render ideas grid if ideas not defined 1`] = `
<div>
  <div
    class="hack-ideas--home-page"
  >
    <nav>
      <div
        class="nav-wrapper"
      >
        <a
          class="brand-logo"
        >
          { Hack Ideas }
        </a>
        <ul
          class="right"
        >
          <li>
            <a
              class="logout-btn"
            >
              Logout
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div>
      Filter
    </div>
    <div
      class="hack-ideas--cards"
    >
      <div
        class="card-panel red lighten-4 center-align"
      >
        No ideas to show.
      </div>
    </div>
    <div
      class="fixed-action-btn register-idea-btn"
    >
      <a
        class="btn-floating btn-large"
      >
        <i
          class="large material-icons"
        >
          add
        </i>
      </a>
    </div>
  </div>
</div>
`;

exports[`Home Page Component renders hack ideas grid 1`] = `
<div>
  <div
    class="hack-ideas--home-page"
  >
    <nav>
      <div
        class="nav-wrapper"
      >
        <a
          class="brand-logo"
        >
          { Hack Ideas }
        </a>
        <ul
          class="right"
        >
          <li>
            <a
              class="logout-btn"
            >
              Logout
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div>
      Filter
    </div>
    <div
      class="hack-ideas--cards"
    >
      <div
        class="hack-idea--grid"
      >
        <div
          class="hack-idea--card card"
        >
          <div
            class="card-content"
          >
            <span
              class="card-title"
            >
              idea 1
            </span>
            <p>
              idea 1
            </p>
            <div
              class="card-chips"
            />
          </div>
          <div
            class="card-action"
          >
            <a
              class="card-action--button  disabled"
            >
              <i
                class="material-icons"
              >
                thumb_up
              </i>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fixed-action-btn register-idea-btn"
    >
      <a
        class="btn-floating btn-large"
      >
        <i
          class="large material-icons"
        >
          add
        </i>
      </a>
    </div>
  </div>
</div>
`;
